--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <!--HERO-->
   <div id="grad2">
   <div class="hero">
-    <img src="/images/cslogo.png" class="align-self-center mr-3" alt="cslogo" width="200" height="200">
+    <img src="images/cslogo.png" class="align-self-center mr-3" alt="cslogo" width="200" height="200">
     <div class="hero-body">
       <p><b>Tomorrow’s Rainbow is a nonprofit organization in 
           Coconut Creek, FL that provides instrumental support to children 
@@ -70,7 +70,7 @@
      <div class="container">
         <div class="row">
           <div class="col-sm">
-            <img src="/images/stat1.png" alt="stat1" width="145" height="150">
+            <img src="images/stat1.png" alt="stat1" width="145" height="150">
             <p>finds support through referrals</p>
           </div>
           <div class="col-sm-3">
@@ -81,7 +81,7 @@
             <p>recently lost a loved one</p>
           </div>
           <div class="col-sm">
-            <img src="/images/stat2.png" alt="stat2" width="160" height="150">
+            <img src="images/stat2.png" alt="stat2" width="160" height="150">
             <p>considers animals therapeutic or would like to try animal therapy</p>
           </div>
         </div>
@@ -93,14 +93,14 @@
 <p class="ui-descript"><i>Below are highlights from the first round of user testing on the site 
     as it currently is.</i></p>
     <div class="iteration">
-        <img src="/images/ideation.png" class="ideation" alt="ideation" 
+        <img src="images/ideation.png" class="ideation" alt="ideation" 
         width="400" height="400">
 
         <div class="media-body">
           <h6 class="mt-0"><b>User Stories</b></h6>
           <p>Based on the data collected, we created <b>3</b> user personas in order 
               to visualize who are our typical users would be.</p>
-              <img src="/images/userpersona.png" class="user-persona" alt="persona" 
+              <img src="images/userpersona.png" class="user-persona" alt="persona" 
               width="400" height="400">
               <!--user persona background image goes here-->
         </div>
@@ -112,13 +112,13 @@
     <div class="container">
       <div class="row align-items-start">
         <div class="col">
-          <img src="/images/WF1.jpg" alt="wireframe1" width="200" height="130">
+          <img src="images/WF1.jpg" alt="wireframe1" width="200" height="130">
         </div>
         <div class="col">
-          <img src="/images/WF2.png" alt="wireframe2" width="200" height="130">
+          <img src="images/WF2.png" alt="wireframe2" width="200" height="130">
         </div>
         <div class="col">
-          <img src="/images/WF3.png" alt="wireframe3" width="200" height="130">
+          <img src="images/WF3.png" alt="wireframe3" width="200" height="130">
         </div>
       </div>
       
@@ -126,13 +126,13 @@
 
       <div class="row align-items-end">
         <div class="col">
-          <img src="/images/WF4.png" alt="wireframe4" width="200" height="130">
+          <img src="images/WF4.png" alt="wireframe4" width="200" height="130">
         </div>
         <div class="col">
-          <img src="/images/WF5.png" alt="wireframe5" width="200" height="130">
+          <img src="images/WF5.png" alt="wireframe5" width="200" height="130">
         </div>
         <div class="col">
-          <img src="/images/WF6.png" alt="wireframe6" width="200" height="130">
+          <img src="images/WF6.png" alt="wireframe6" width="200" height="130">
         </div>
       </div>
     </div>
@@ -148,7 +148,7 @@
 </div>
 
 <div class="style-guide">
-  <img src="/images/styleguide.png" class="align-self-center mr-3" alt="style guide" 
+  <img src="images/styleguide.png" class="align-self-center mr-3" alt="style guide" 
   width="500" height="330">
   <div class="sg-body">
     <h6class="styleguide"><b>Style Guide</b></h6>
@@ -170,11 +170,11 @@
     <div class="row">
       <div class="col">
         Comparison Screen Before
-        <p><img src="/images/beforehp1.png" alt="before screen" width="250" height="200"></p>
+        <p><img src="images/beforehp1.png" alt="before screen" width="250" height="200"></p>
       </div>
       <div class="col">
         Comparison Screen After
-        <p><img src="/images/afterhp1.png" alt="after screen" width="250" height="200"></p>
+        <p><img src="images/afterhp1.png" alt="after screen" width="250" height="200"></p>
       </div>
     </div>
     </div>
@@ -189,19 +189,19 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <img src="/images/proto1.png" alt="prototype 1" width="100" height="200">
+      <img src="images/proto1.png" alt="prototype 1" width="100" height="200">
     </div>
     <div class="col">
-      <img src="/images/proto2.png" alt="prototype 2" width="100" height="200">
+      <img src="images/proto2.png" alt="prototype 2" width="100" height="200">
     </div>
     <div class="col">
-      <img src="/images/proto3.png" alt="prototype 3" width="100" height="200">
+      <img src="images/proto3.png" alt="prototype 3" width="100" height="200">
     </div>
     <div class="col">
-      <img src="/images/proto4.png" alt="prototype 4" width="100" height="200">
+      <img src="images/proto4.png" alt="prototype 4" width="100" height="200">
     </div>
     <div class="col">
-      <img src="/images/proto5.png" alt="prototype 5" width="100" height="200">
+      <img src="images/proto5.png" alt="prototype 5" width="100" height="200">
     </div>
   </div>
 </div>
